# fcs

./: .gitignore  LICENSE  README.md  meson.build
resources/: ui.gresource.xml
resources/ui/: BrowseFolderDialog.ui  FileContentSearcherWindow.ui
src/: FCSSettings.vala  FileContentSearcher.vala  Main.vala
src/ui/: BrowseFolderDialog.vala  FileContentSearcherWindow.vala
